index.html updated from https://stackedit.io/

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
 </head>
 
 <body class="stackedit">
+  <div class="stackedit__left">
+    <div class="stackedit__toc">
+      
+<ul>
+<li><a href="#hello-my-name-is-torin-kovach.">Hello! My name is Torin Kovach.</a>
+<ul>
+<li></li>
+</ul>
+</li>
+</ul>
+
+    </div>
+  </div>
   <div class="stackedit__right">
     <div class="stackedit__html">
       <h1 id="hello-my-name-is-torin-kovach.">Hello! My name is Torin Kovach.</h1>
