--- a/index.html
+++ b/index.html
@@ -9,28 +9,11 @@
 </head>
 
 <body class="stackedit">
-  <div class="stackedit__left">
-    <div class="stackedit__toc">
-      
-<ul>
-<li><a href="#hello-my-name-is-torin-kovach.">Hello! My name is Torin Kovach.</a>
-<ul>
-<li></li>
-</ul>
-</li>
-</ul>
-
-    </div>
-  </div>
-  <div class="stackedit__right">
-    <div class="stackedit__html">
-      <h1 id="hello-my-name-is-torin-kovach.">Hello! My name is Torin Kovach.</h1>
+  <div class="stackedit__html"><h1 id="hello-my-name-is-torin-kovach.">Hello! My name is Torin Kovach.</h1>
 <p>I am a current high school senior at the Illinois Mathematics and Science Academy. this August I will be a freshman at the Carnegie Mellon University School of Computer Science. You can view my projects below:</p>
 <h3 id="“i’m-afraid-i-can’t-do-that”---the-impact-of-2001-a-space-odyssey-on-modern-technology-and-digital-culture"><a href="2001.html">“I’m Afraid I Can’t Do That” - The Impact of <em>2001: A Space Odyssey</em> on Modern Technology and Digital Culture</a></h3>
 <h3 id="the-gartner-hype-cycle-how-to-understand-the-next-big-thing"><a href="gartner.html">The Gartner Hype Cycle: How to Understand the Next Big Thing</a></h3>
-
-    </div>
-  </div>
+</div>
 </body>
 
 </html>
