--- a/MurderMystery/March 17th.html
+++ b/MurderMystery/March 17th.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="shortcut icon" type="image/jpg" href="https://raw.githubusercontent.com/TorinK2/TorinK2.github.io/master/MurderMystery/favicon.ico"/>
 <!--
 	By Torin Kovach
 	Last edited March 29th, 2020
