Made new font universal

--- a/MurderMystery/March 17th.html
+++ b/MurderMystery/March 17th.html
@@ -10,6 +10,7 @@
 	The background image was edited from tpsdave's image on pixabay.com (https://pixabay.com/photos/house-home-mansion-spooky-eerie-1901147/)
 	All other images and graphics are either web-linked to their original owners or are self-designed.
 	The Pixlr (https://pixlr.com/) software was used for image editing.
+	Font was used from Google Fonts (https://fonts.google.com/specimen/Special+Elite)
 -->
 <meta charset="utf-8">
 <title>March 17th</title>
