--- a/MurderMystery/March 17th Walkthrough.html
+++ b/MurderMystery/March 17th Walkthrough.html
@@ -24,13 +24,17 @@
 
 <tw-storydata name="March 17th Walkthrough" startnode="1" creator="Twine" creator-version="2.3.5" ifid="5CEEBB92-5797-4FA9-918B-D61E9B270940" zoom="1" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">.visited { color: firebrick; }
 .visited:hover { color: red; }
+@font-face {
+  font-family: 'Press Start 2P';
+  src: local('Special Elite Regular'), local('SpecialElite-Regular'), url(https://fonts.gstatic.com/s/specialelite/v10/XLYgIZbkc4JPUL5CVArUVL0ntnAOSFNuQsI.woff2) format('woff2');
+}
 html {
 	background-color: black;
 }
 tw-story {	
   color: black;
   font-size: 30px;
-  font-family: cursive;
+  font-family: 'Press Start 2P';
   background: lightblue; /* For old browsers */    
   background: -webkit-linear-gradient(lightblue, blue);
   background: -o-linear-gradient(lightblue, blue);
