--- a/MurderMystery/March 17th.html
+++ b/MurderMystery/March 17th.html
@@ -450,7 +450,7 @@ As Roger continued to eat, his throat started to feel tighter... and tighter... 
 &quot;Ruth, help me!&quot; he gasped, &quot;Call 911!&quot;
 Ruth got up from her chair slowly, and stood over him.
 &quot;I will, once I&#39;m sure there&#39;s no chance of them resuscitating you.&quot; she said. Roger&#39;s eyes lit up with panic.
-&quot;I&#39;ve known. Ever since the night Roger died, I&#39;ve known. Who do you think killed grandpa anyway -- we both know Ricky was too busy getting drunk all night.&quot;
+&quot;I&#39;ve known. Ever since the night Robert died, I&#39;ve known. Who do you think killed grandpa anyway -- we both know Ricky was too busy getting drunk all night.&quot;
 By now, Roger had fallen out of his chair and was on the floor, grabbing his neck.
 &quot;How the Hell could you&#39;ve killed your wife, my mother? Well, I guess I&#39;ll never get an answer. Bye, dad.&quot;
 Picking up her father&#39;s plate, she left him on the kitchen floor to go and clean the dishes.
