--- a/MurderMystery/March 17th.html
+++ b/MurderMystery/March 17th.html
@@ -62,7 +62,7 @@ img {
 }
 tw-sidebar {
   display:none;
-}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Robert Entright" tags="" position="400,101" size="100,100">Robert Entright died in his 2-story Beaux Arts [[mansion|The House]] in Hartforf, CT, on March 17th, 2019. His [[family|Meet the Entrights.]] had come to visit.
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Robert Entright" tags="" position="400,101" size="100,100">Robert Entright died in his 2-story Beaux Arts [[mansion|The House]] in Hartford, CT, on March 17th, 2019. His [[family|Meet the Entrights.]] had come to visit.
 (if: (history:) contains &quot;The House&quot; and (history:) contains &quot;Meet the Entrights.&quot;)[[Continue.|Intro]]</tw-passagedata><tw-passagedata pid="2" name="Meet the Entrights." tags="" position="260,345" size="100,100">(link-repeat: &quot;Robert&quot;)[(open-url: &#39;https://torink2.github.io/MurderMystery/RobertEntright.pdf&#39;)]
 [[Robin|Robin]]
 [[Ricky|Ricky]]
