--- a/MurderMystery/March 17th.html
+++ b/MurderMystery/March 17th.html
@@ -207,7 +207,7 @@ As he pushed some frozen peas and packaged steaks, he couldn&#39;t believe the s
 &quot;What the hell is dad up to?&quot; he shouted out loud as he slammed the freezer shut and ran up to his father&#39;s study.
 [[Back.|MainPage]]</tw-passagedata><tw-passagedata pid="23" name="Father-son Bonding" tags="" position="579,1183" size="100,100">//5:45 pm, March 17th, 2019//
 Ricky cruised into his father&#39;s neighborhood around 70 mph in his vintage Cadillac Eldorado. A cigarette hanging out of his mouth and his car radio blaring music, he turned into the Entright house and parked in the drive. As he exited his car, slammed the door, and walked up the house&#39;s entrance, he flicked the cigarette out into the neatly mowed lawn. Checking the handle to the front door and finding it unlocked, Ricky let himself in. At the foot of the stairs stood his father, Robert.
-&quot;About time you got here. I could hear that mostorous thing you call a car from the basement. I have to talk to you -- let&#39;s go to my study.&quot;
+&quot;About time you got here. I could hear that monstorous thing you call a car from the basement. I have to talk to you -- let&#39;s go to my study.&quot;
 &quot;Whatever you say dad.&quot;
 
 As they arrived at the study, Robert waited by the door and closed it behind them.
@@ -903,7 +903,7 @@ Picking up her father&#39;s plate, she left him on the kitchen floor to go and c
 (text-style: &quot;rumble&quot;)[[[White with the Pistol in the Observatory|Nope]]]
 (text-style: &quot;shudder&quot;)[[[White with the Poison in the Observatory|Nope]]]
 (text-style: &quot;rumble&quot;)[[[White with the Trophy in the Observatory|Nope]]]
-(text-style: &quot;shudder&quot;)[[[White with the Rope in the Observatory|Nope]]]
+(text-style: &quot;shudder&quot;)[[[White with the Rope in the Observatory|END]]]
 (text-style: &quot;rumble&quot;)[[[White with the Bat in the Observatory|Nope]]]
 (text-style: &quot;shudder&quot;)[[[White with the Ax in the Observatory|Nope]]]
 (text-style: &quot;rumble&quot;)[[[White with the Dumbell in the Observatory|Nope]]]
